--- a/index1.html
+++ b/index1.html
@@ -18,7 +18,7 @@
         }
     </style>
 
-    <title>Boboulo</title>
+    <title>Boboulo test</title>
 
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
