--- a/index1.html
+++ b/index1.html
@@ -8,7 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
-	<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="js/static.js"></script>
+    <script src="js/init.js"></script>
+
 
     <style>
         html,
@@ -50,14 +53,13 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="index1.html"><span class="glyphicon glyphicon-home"
                          aria-hidden="true"></span> Home</a></li>
-                    <li><a href="aboutus.html">
-                        <span class="glyphicon glyphicon-info-sign"
-                         aria-hidden="true"></span> About</a></li>
+                    <li>
+                        <a href="aboutus.html">
+                            <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a>
+                    </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                         role="button" aria-haspopup="true" aria-expanded="false">
-                            <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                            User <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <span class="glyphicon glyphicon-user" aria-hidden="true"></span> User <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="createapplication.html">Apply</a></li>
                             <li><a href="#">Profil</a></li>
@@ -181,345 +183,12 @@
     </footer>
 
 
-    <script>
-        var map;
-        var myLatlng = {
-            lat: -25.363,
-            lng: 131.044
-        };
-        var geo;
-        var geocoder;
-
-        function initMap() {
-            map = new google.maps.Map(document.getElementById('map'), {
-                center: myLatlng,
-                zoom: 4
-            });
-
-            var marker = new google.maps.Marker({
-                position: myLatlng,
-                map: map,
-                title: 'Click to zoom'
-            });
-
-            marker.addListener('click', function () {
-                map.setZoom(8);
-                map.setCenter(marker.getPosition());
-            });
-
-            geocoder = new google.maps.Geocoder();
-
-        }
-
-        function geocodeAddress(address) {
-            geocoder.geocode({
-                'address': address
-            }, function (results, status) {
-                if (status === google.maps.GeocoderStatus.OK) {
-                    map.setCenter(results[0].geometry.location);
-                    map.setZoom(12);
-                    var marker = new google.maps.Marker({
-                        map: map,
-                        position: results[0].geometry.location,
-                    });
-                } else {
-                    alert('Geocode was not successful for the following reason: ' + status);
-                }
-            });
-        }
-
-        document.getElementById("btn").addEventListener("click", function () {
-            geocodeAddress("marinduque philippines");
-        });
-
-        var x = -25;
-        var y = 133;
-        
-        function addMarker() {
-            var marker = new google.maps.Marker({
-                position: {
-                    lat: x++,
-                    lng: y++
-                },
-                map: map,
-                title: 'Click to zoom'
-            });
-        }
+    <script src="js/googlemap.js">
     </script>
 
     <script src="js/updatechart.js"></script>
 
-    <script>
-        var myDataRef = new Firebase('https://d4riwejbb99.firebaseio-demo.com/');
-        var applicationsRef = myDataRef.child("applications");
-        var companiesRef = myDataRef.child("companies");
-        var categoriesRef = myDataRef.child("categories");
-        var statesRef = myDataRef.child("states");
-
-
-        var categories;
-
-        //initFire();
-
-        /*
-                //list of all applications (company name and position) for a user
-                applicationsRef.child("luis").on("child_added", function (snapshot) {
-                    console.log("luis applications : " + snapshot.val().company + " " + snapshot.val().position);
-                }, function (errorObject) {
-                    console.log("The read failed: " + errorObject.code);
-                });
-
-                applicationsRef.child("dadakoko").on("child_added", function (snapshot) {
-                    console.log("david applications : " + snapshot.val().company + " " + snapshot.val().position);
-                });
-
-                //list of all applications (company name and address) for a user
-                applicationsRef.child("dadakoko").on("value", function (snapshot) {
-                    snapshot.forEach(function (data) {
-                        var queryRef = companiesRef.child(data.val().company);
-                        queryRef.on("value", function (querySnapshot) {
-                            console.log("david applications pour company : " + querySnapshot.val().name + " a: " + querySnapshot.val().address);
-                        });
-                    });
-                });
-        */
-
-        //list of companies
-        //list of users
-        //list of states
-        //list of categories
-        categoriesRef.once("value", function (snap) {
-            categories = $.map(snap.val(), function (value, index) {
-                return [index];
-            });
-            var applicationPerCategories = [];
-            applicationPerCategories.push(['Applications', 'number of app per categories']);
-            $.each(categories, function (i, n) {
-                var tmp = [n, 1];
-                applicationPerCategories.push(tmp);
-            });
-
-            console.log(applicationPerCategories);
-            var data = google.visualization.arrayToDataTable(applicationPerCategories);
-
-            var options = {
-                title: 'My applications',
-                is3D: true,
-            };
-
-            var chart = new google.visualization.PieChart(document.getElementById('piechart'));
-
-            chart.draw(data, options);
-
-
-        });
-
-
-        /*
-                //dadakoko add a new application
-                //first add the company that is not stored yet
-                var cern = {
-                    cern: {
-                        name: "CERN",
-                        address: "meyrin"
-                    }
-                };
-                companiesRef.update(cern);
-                //second: add dadakoko as a candidate
-                companiesRef.child("cern").child("candidates").update({
-                    "dadakoko": true
-                });
-                //finally: add the application
-                var application6 = {
-                    date: "31/12",
-                    state: "ongoing",
-                    company: "cern",
-                    position: "particule elementaire",
-                    categories: {
-                        cascade: true
-                    }
-                };
-                applicationsRef.child("dadakoko").push().set(application6);
-        */
-
-        function initFire() {
-            var users = {
-                users: {
-                    dadakoko: {
-                        username: "California",
-                        friends: {
-                            luis: true,
-                            ella: true
-                        }
-                    },
-                    luis: {
-                        username: "luisb",
-                        friends: {
-                            dadakoko: true
-                        }
-                    },
-                    ella: {
-                        username: "elafizt",
-                        friends: {
-                            dadakoko: true
-                        }
-                    }
-                }
-            };
-
-            myDataRef.set(users);
-
-            var luisRef = applicationsRef.child("luis");
-
-            var application1 = {
-                date: "10/07",
-                state: "ongoing",
-                company: "sacpi",
-                position: "president director",
-                categories: {
-                    informatique: true,
-                    management: true
-                }
-            };
-
-            var application3 = {
-                date: "10/10",
-                state: "rejected",
-                company: "pectit",
-                position: "trader",
-                categories: {
-                    shark: true
-                }
-            };
-
-            luisRef.push().set(application3);
-            luisRef.push().set(application1);
-
-            var dadaRef = applicationsRef.child("dadakoko");
-            var application2 = {
-                date: "23/10",
-                state: "ongoing",
-                company: "pectit",
-                position: "web developer",
-                categories: {
-                    shark: true
-                }
-            };
-
-            var application4 = {
-                date: "31/12",
-                state: "accepted",
-                company: "nomades",
-                position: "prof",
-                categories: {
-                    prof: true,
-                    informatique: true
-                }
-            };
-
-            dadaRef.push().set(application4);
-            dadaRef.push().set(application2);
-
-            var ellaRef = applicationsRef.child("ella");
-            var application5 = {
-                date: "31/12",
-                state: "accepted",
-                company: "nomades",
-                position: "prof",
-                categories: {
-                    prof: true,
-                    informatique: true
-                }
-            };
-
-            ellaRef.push().set(application5);
-
-            var companies = {
-                sacpi: {
-                    name: "sacpi SA",
-                    address: "prilly",
-                    candidates: {
-                        luis: true
-                    }
-                },
-                pectit: {
-                    name: "pectit bank",
-                    address: "petit lancy",
-                    candidates: {
-                        dadakoko: true,
-                        luis: true
-                    }
-                },
-                nomades: {
-                    name: "nomades ateliers",
-                    address: "rue des acacias geneve",
-                    candidates: {
-                        dadakoko: true,
-                        ella: true
-                    }
-                },
-                victoria: {
-                    name: "victoria hall",
-                    address: "plainpalais geneve",
-                    candidates: {}
-                }
-            };
-
-            companiesRef.set(companies);
-
-            var categories = {
-                informatique: true,
-                shark: true,
-                prof: true,
-                cascade: true,
-                management: true,
-                music: true
-            };
-
-            categoriesRef.set(categories);
-
-            var states = {
-                accepted: true,
-                rejected: true,
-                ongoing: true
-            };
-
-            statesRef.set(states);
-
-        }
-    </script>
-
     <script src="https://www.gstatic.com/charts/loader.js"></script>
-
-    <script>
-        google.charts.load('current', {
-            'packages': ['corechart']
-        });
-        google.charts.setOnLoadCallback(drawChart);
-
-        /*        function drawChart() {
-
-                    var data = google.visualization.arrayToDataTable([
-                        ['Task', 'Hours per Day'],
-                        ['Giliw kiss', 11],
-                        ['Eat with giliw', 2],
-                        ['Commute', 2],
-                        ['Watch TV', 2],
-                        ['Sleep with giliw', 7]
-                    ]);
-
-                    var options = {
-                        title: 'My Daily Activities',
-                        is3D: true,
-                    };
-
-                    var chart = new google.visualization.PieChart(document.getElementById('piechart'));
-
-                    chart.draw(data, options);
-
-                }
-        */
-    </script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2POV4QB0x48pf1YHsts9bX49P6eVMiOU&callback=initMap" async defer></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
