attempt to separate storage, chart, gmap

--- a/index1.html
+++ b/index1.html
@@ -7,10 +7,14 @@
     <meta http-equiv="x-ua-compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+
     <script src="js/static.js"></script>
+    <script src="js/fireStorage.js"></script>
     <script src="js/init.js"></script>
+
 
 
     <style>
@@ -181,16 +185,12 @@
     </footer>
 
 
-    <script src="js/googlemap.js">
-    </script>
-
-    <script src="js/updatechart.js"></script>
-
     <script src="https://www.gstatic.com/charts/loader.js"></script>
-
+    <script src="js/updatechart.js"></script>
+    <script src="js/mainController.js"></script>
+    <script src="js/googlemap.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2POV4QB0x48pf1YHsts9bX49P6eVMiOU&callback=initMap" async defer></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+
 
 </body>
 
