--- a/index1.html
+++ b/index1.html
@@ -106,7 +106,8 @@
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
                 <h2>Applications state</h2>
-                <div id="piechart" style="width: 900px; height: 500px;"></div>
+                <div id="piechartState" style="width: 900px; height: 500px;"></div>
+                <div id="piechartCategory" style="width: 900px; height: 500px;"></div>
                 <input id="pieInput" type="text">
                 <button id="pieBtn">OK</button>
                 <p><a href="#">More &raquo;</a></p>
