--- a/aboutus.html
+++ b/aboutus.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-     <meta charset="utf-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head 
          content must come *after* these tags -->
     <title>Ristorante Con Fusion: About Us</title>
-        <!-- Bootstrap -->
+    <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -43,16 +43,9 @@
                         <a href="#">
                             <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a>
                     </li>
-                    <li class="dropdown">
-                        <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            <span class="glyphicon glyphicon-user" aria-hidden="true"></span> User <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="createapplication.html">Apply</a></li>
-                            <li><a href="">Profil</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li class="dropdown-header">Specials</li>
-                            <li><a href="">Something</a></li>
-                        </ul>
+                    <li>
+                        <a href="user.html">
+                            <span class="glyphicon glyphicon-user" aria-hidden="true"></span> User</a>
                     </li>
                     <li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
                 </ul>
@@ -81,15 +74,16 @@
             <div class="col-xs-12">
                 <ol class="breadcrumb">
                     <li><a href="index1.html">Home</a></li>
-                    <li class="active">About Us</a></li>
+                    <li class="active">About Us</a>
+                    </li>
                 </ol>
             </div>
             <div class="col-xs-12">
-               <h3>About Us</h3>
-               <hr>
+                <h3>About Us</h3>
+                <hr>
             </div>
         </div>
-        
+
         <div class="row row-content">
             <div class="col-xs-12">
                 <h2>Our History</h2>
@@ -109,16 +103,16 @@
                 <h3>Dhanasekaran Witherspoon <small>another guy</small></h3>
                 <p>bla bfadfbadfba fbadbf adfbadfb abafb </p>
             </div>
-             <div>
+            <div>
                 <p style="padding:20px;"></p>
             </div>
-       </div>
+        </div>
 
     </div>
 
     <footer class="row-footer">
         <div class="container">
-            <div class="row">             
+            <div class="row">
                 <div class="col-xs-5 col-xs-offset-1 col-sm-2 col-sm-offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
