--- a/contactus.html
+++ b/contactus.html
@@ -43,16 +43,9 @@
                         <a href="aboutus.html">
                             <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a>
                     </li>
-                    <li class="dropdown">
-                        <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            <span class="glyphicon glyphicon-user" aria-hidden="true"></span> User <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="createapplication.html">Apply</a></li>
-                            <li><a href="">Profil</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li class="dropdown-header">Specials</li>
-                            <li><a href="">Something</a></li>
-                        </ul>
+                    <li>
+                        <a href="user.html">
+                            <span class="glyphicon glyphicon-user" aria-hidden="true"></span> User</a>
                     </li>
                     <li class="active"><a href="#"><i class="fa fa-envelope-o"></i> Contact</a></li>
                 </ul>
