--- a/user.html
+++ b/user.html
@@ -55,13 +55,13 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="index1.html"><span class="glyphicon glyphicon-home"
+                    <li><a href="index1.html"><span class="glyphicon glyphicon-home"
                          aria-hidden="true"></span> Home</a></li>
                     <li>
                         <a href="aboutus.html">
                             <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a>
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="user.html">
                             <span class="glyphicon glyphicon-user" aria-hidden="true"></span> User</a>
                     </li>
@@ -128,60 +128,44 @@
     <div class="container">
 
         <div class="row row-content">
-            <div class="col-xs-12">
-                <div id="mycarousel" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li class="active" data-target="#mycarousel" data-slide-to="0"></li>
-                        <li data-target="#mycarousel" data-slide-to="1"></li>
-                        <li data-target="#mycarousel" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner" role="listbox">
-                        <div class="item active">
-                            <img class="img-responsive" src="img/googlegraphpie.png" width="50%" height="50%" alt="Chart Pie">
-                            <div class="carousel-caption">
-                                <h2 class="media-heading">
-                            E-cockpit
-                            </h2>
-                                <p>pilot from your E-cockpit your applications using pie charts</p>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img class="img-responsive" src="img/googlemap.jpg" width="50%" height="50%"  alt="Location">
-                            <div class="carousel-caption">
-                                <h2 class="media-heading">Locate your applications</h2>
-                                <p>Locate your application and easily grab detail informations about it.</p>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img class="img-responsive" src="img/jobappform.png" alt="Alberto Somayya">
-                            <div class="carousel-caption">
-                                <h2>Send Applications!</h2>
-                                <p>Call,  Email, Skype, ...</p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Controls -->
-                    <a class="left carousel-control" href="#mycarousel" role="button" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                    <div class="btn-group" id="carouselButtons">
-                        <button class="btn btn-danger btn-xs" id="carousel-pause">
-                            <span class="glyphicon glyphicon-pause" aria-hidden="true"></span>
-                        </button>
-                        <button class="btn btn-danger btn-xs" id="carousel-play">
-                            <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-                        </button>
-                    </div>
-                </div>
+            <div class="col-xs-12 col-sm-3 col-sm-push-9">
+                <p style="padding:20px;"></p>
+                <h3 align=center>E-cockpit</h3>
+            </div>
+            <div class="col-xs-12 col-sm-9 col-sm-pull-3">
+                <h2>Applications state</h2>
+                <div id="piechartState" style="width: 900px; height: 500px;"></div>
+                <div id="piechartCategory" style="width: 900px; height: 500px;"></div>
+                <input id="pieInput" type="text">
+                <button id="pieBtn">OK</button>
+                <p><a href="#">More &raquo;</a></p>
             </div>
         </div>
 
 
+        <div class="row row-content">
+            <div class="col-xs-12 col-sm-3">
+                <p style="padding:20px;"></p>
+                <h3 align=center>Locations</h3>
+            </div>
+            <div class="col-xs-12 col-sm-9" style="height: 500px">
+                <p><a href="#">More &raquo;</a></p>
+                <button id="btn">OK</button>
+                <div id="map"></div>
+            </div>
+        </div>
+
+        <div class="row row-content">
+            <div class="col-xs-12 col-sm-3 col-sm-push-9">
+                <p style="padding:20px;"></p>
+                <h3 align=center>Applications List</h3>
+            </div>
+            <div class="col-xs-12 col-sm-9 col-sm-pull-3">
+                <h4>list</h4>
+                <p></p>
+                <p><a href="#">More &raquo;</a></p>
+            </div>
+        </div>
     </div>
 
     <footer class="row-footer">
@@ -235,20 +219,6 @@
     <script src="js/mainController.js"></script>
     <script src="js/googlemap.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2POV4QB0x48pf1YHsts9bX49P6eVMiOU&callback=initMap" async defer></script>
-
-    <script>
-        $(document).ready(function () {
-            $("#mycarousel").carousel({
-                interval: 2000
-            });
-            $("#carousel-pause").click(function () {
-                $("#mycarousel").carousel('pause');
-            });
-            $("#carousel-play").click(function () {
-                $("#mycarousel").carousel('cycle');
-            });
-        });
-    </script>
 
 
 </body>
