clean a bit the messages

--- a/user.html
+++ b/user.html
@@ -113,9 +113,9 @@
         <div class="container">
             <div class="row row-header">
                 <div class="col-xs-12 col-sm-8">
-                    <h1>Boboulo manage your applications!</h1>
+                    <h1>Hello user!</h1>
                     <p style="padding:40px;"></p>
-                    <p>This tool helps people looking for a job to manage the applications they perform. Among the features available, users can easily create a new application and easily search/access to the data of any of his applications. In addition, the adviser can access to the applications of people he supports. In a futur version a page dedicated for employer should be added </p>
+                    <p>How are your applications ?</p>
                 </div>
                 <div class="col-xs-12 col-sm-4">
                 </div>
